--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
             font-size: 32px;
             font-weight: bold;
             color: #FF7043;
-            animation: fadeInUp 2s ease-out;
+            animation: fadeInUp 1s ease-out forwards; /* Reduced animation time and set it to stay visible */
             opacity: 0;  /* Initially hidden */
         }
 
